--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^3.0.1",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
