--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux": "^4.2.0",
     "sweetalert2": "^11.6.2",
     "swiper": "^9.0.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-datepicker": "^4.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
