general setting updated

--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "js-cookie": "^3.0.1",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.39.1",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-phone-number-input": "^3.2.16",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
