--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
+    "chroma-js": "^2.4.2",
     "csstype": "^3.1.1",
     "daisyui": "^2.50.1",
     "date-fns": "^2.29.3",
@@ -35,6 +36,7 @@
     "react-router-dom": "^6.6.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "react-share": "^4.4.1",
     "react-simple-typewriter": "^5.0.1",
     "react-text-transition": "^3.0.2",
