--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "proxy": "http://127.0.0.1:3000",
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.14.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,7 +12,6 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
-    "chroma-js": "^2.4.2",
     "csstype": "^3.1.1",
     "daisyui": "^2.50.1",
     "date-fns": "^2.29.3",
