--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-select": "^5.7.2",
     "react-share": "^4.4.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-social-icons": "^5.15.0",
     "react-text-transition": "^3.0.2",
     "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
