--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,43 +1,33 @@
 {
     // Theme
-    "workbench.colorTheme": "One Dark Pro",
+    "workbench.colorTheme": "Learn with Sumit Official Theme",
+  
     // config related to code formatting
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "[javascript]": {
-        "editor.formatOnSave": false,
-        "editor.defaultFormatter": null
+      "editor.formatOnSave": false,
+      "editor.defaultFormatter": null
     },
     "[javascriptreact]": {
-        "editor.formatOnSave": false,
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
+      "editor.formatOnSave": false,
+      "editor.defaultFormatter": null
     },
     "javascript.validate.enable": false, //disable all built-in syntax checking
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true,
-        "source.fixAll.tslint": true,
-        "source.organizeImports": true
+      "source.fixAll.eslint": true,
+      "source.fixAll.tslint": true,
+      "source.organizeImports": true
     },
     "eslint.alwaysShowStatus": true,
-    "eslint.validate": [
-        "javascript",
-        "javascriptreact"
-    ],
+    "eslint.validate": ["javascript", "javascriptreact"],
     // emmet
     "emmet.triggerExpansionOnTab": true,
     "emmet.includeLanguages": {
-        "javascript": "javascriptreact"
+      "javascript": "javascriptreact"
     },
     "css.validate": false,
-    "tailwindCSS.emmetCompletions": true,
-    "cSpell.words": [
-        "Aadhar",
-        "Remo",
-        "remoforce",
-        "Remostart",
-        "remostarts",
-        "remowelcome",
-        "swiper"
-    ],
-    "terminal.explorerKind": "integrated"
-}
+  
+    "tailwindCSS.emmetCompletions": true
+  }
+  
