my job requested added , bug fixed talent request history card updated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,8 @@
     "javascript": "javascriptreact"
   },
   "css.validate": false,
-  "tailwindCSS.emmetCompletions": true
+  "tailwindCSS.emmetCompletions": true,
+  "cSpell.words": [
+    "Remo"
+  ]
 }
