--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   // Theme
-  "workbench.colorTheme": "Noctis Viola",
+  "workbench.colorTheme": "Learn with Sumit Official Theme",
   // config related to code formatting
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
